Initial commit for dstreet.github.io

--- a/source/_scss/_variables.scss
+++ b/source/_scss/_variables.scss
@@ -2,7 +2,7 @@
 //=            Variables          =
 //=================================
 
-$primary-color: #2ecc71 !default;
+$primary-color: #2ebfe7 !default;
 $black-color: #000 !default;
 $silver-color: #eee !default;
 $white-color: #fff !default;
