--- a/source/_scss/_layout.scss
+++ b/source/_scss/_layout.scss
@@ -225,6 +225,22 @@
   }
 }
 
+.footnote {
+    padding: 3px;
+    font-size: 0.75em;
+}
+
+.footnotes li > p {
+    font-size: 0.75em;
+    font-style: italic;
+
+    a.reversefootnote {
+        float: left;
+        margin-right: 10px;
+        font-style: normal;
+    }
+}
+
 @keyframes octocat-wave {
   0%,100% {
     transform: rotate(0);
