--- a/source/_scss/_base.scss
+++ b/source/_scss/_base.scss
@@ -165,7 +165,7 @@ code {
   background: none;
   border-radius: 0;
   border: none;
-  font-family: "Courier New", monospace;
+  font-family: monospace;
   font-size: 0.9em;
   margin: 0;
   padding: 0 5px;
