--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -6,6 +6,8 @@
       <ul>
         <li><a href="{{ "/" | prepend: site.baseurl }}">home</a></li>
         <li class="divider">&bull;</li>
+        <li><a href="{{ "/about" | prepend: site.baseurl }}">about</a></li>
+        <li class="divider">&bull;</li>
         <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}" target="_blank"><i class="icon icon-feed"></i> feed</a></li>
       </ul>
     </nav>
