--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,4 +1,4 @@
-{% strip %}<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     {% include head.html %}
@@ -22,4 +22,4 @@
 
     {% include github-corner.html %}
   </body>
-</html>{% endstrip %}
+</html>
